<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/beige"
            android:gravity="center"
            android:text="@string/text_main"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:background="@color/lightblue"
            android:hint="@string/hint_text"
            android:inputType="text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:background="@color/lightblue"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:background="@color/lightblue"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:background="@color/lightblue"
            android:hint="@string/number"
            android:inputType="number"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:background="@color/lightblue"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:background="@color/lightblue"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:background="@color/lightblue"
            android:hint="@string/date"
            android:inputType="date"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>