<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/first_text"
            android:textSize="24sp"
            android:gravity="center"
            android:backgroundTint="@color/beige"/>

        <CalendarView
            android:id="@+id/calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"/>

        <EditText
            android:id="@+id/edittext01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@android:string/paste"
            android:backgroundTint="@color/beige"/>

        <Button
            android:id="@+id/button_01"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_01"
            android:backgroundTint="@color/black"
            android:textColor="@color/red"/>

        <Switch
            android:id="@+id/switch_01"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:ignore="UseSwitchCompatOrMaterialXml"
            android:text="@string/Switch_01"/>

        <CheckBox
            android:id="@+id/checkbox_01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CheсkBox_01"/>

        <ToggleButton
            android:id="@+id/togglebutton_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>
